<resources>
    <string name="app_name">Tweet</string>
    <string name="news_title">新闻</string>
    <string name="test_body">这是一段测试fragment文本</string>
    <string name="home_title">主页</string>
    <string name="me_title">我</string>
    <string name="text_test">这是一段测试文本很长很长很长很长很长很长很长很长很长</string>
    <string name="author">作者</string>
    <string name="test_tweet_body">今天天气真的热，热得李奶奶都不敢出门了！</string>
    <string name="test_tweet_number">11</string>
    <string name="like">点赞</string>
    <string name="comments">评论</string>
    <string name="share">分享</string>
    <string name="user_title">COCO</string>
    <string name="test_user_name">测试用户id</string>
    <string name="home_recommend">推荐</string>
    <string name="home_round">周围</string>
    <string name="user_name">用户名:</string>
    <string name="SETTING_TYPESIZE">设置字体</string>
    <string name="CANCLE">取消</string>
    <string name="CONFIRM">确定</string>
    <string name="login">登录</string>
    <string name="login_id">邮箱:</string>
    <string name="login_des">账号/邮箱：</string>
    <string name="login_posw">密码:</string>
    <string name="register">注册</string>
    <string name="password">密码:</string>
    <string name="user_id">邮箱：</string>
    <string name="register_succeed">注册成功</string>
    <string name="exit_login">注销</string>
    <string name="logout_dialog_title">您确定要注销吗？</string>
    <string-array name="title_tab">
        <item>新闻</item>
        <item>消息</item>
        <item >我</item>
    </string-array>

    <string-array name="news_title">
        <item>新闻</item>
        <item>趣味视频</item>
        <item>段子</item>
    </string-array>
    <string-array name="tweet_title">
        <item>标题栏1</item>
        <item>标题栏2</item>
        <item>标题栏3</item>
    </string-array>



</resources>
