<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:gravity="center"
android:layout_height="0dp">
    <TextView
        android:text="@string/login_id"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/space_15"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_login_dialog_id"
        android:hint="@string/login_des"
        android:layout_width="0dp"
        android:layout_weight="3"

        android:layout_height="wrap_content" />
</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="0dp">
        <TextView
            android:text="@string/login_posw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/space_15"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_login_dialog_pass"
            android:hint="@string/login_posw"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_weight="3"

            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:padding="@dimen/space_15"
        >
        <Button
            android:id="@+id/bt_login_dialog"
            android:text="@string/login"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_login_register"
            android:text="@string/register"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>