<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:padding="@dimen/space_15"
      android:layout_weight="1"
      android:layout_height="0dp">
      <TextView
          android:text="@string/user_id"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:gravity="center"
          android:layout_height="match_parent" />
      <EditText
          android:id="@+id/et_register_dialog_email"
          android:layout_width="0dp"
          android:layout_weight="3"

          android:layout_height="match_parent" />

  </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/space_15"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:text="@string/user_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/et_register_dialog_userName"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/space_15"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:text="@string/password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent" />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/et_register_dialog_password"
            android:layout_height="match_parent" />

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/space_50">
    <Button
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_width="match_parent"
        android:text="@string/register"
        android:id="@+id/bt_register_dialog"
        android:layout_height="match_parent" />

</LinearLayout>
</LinearLayout>
